src/objects/Harvest_Expense_Category__c.object
<CustomObject>
    <fields>
        <fullName>Deactivated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Deactivated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Harvest_ID__c</fullName>
        <externalId>true</externalId>
        <label>Harvest ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Unit_Name__c</fullName>
        <label>Unit Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unit_Price__c</fullName>
        <label>Unit Price</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <label>Harvest Expense Category</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Unit_Name__c</columns>
        <columns>Unit_Price__c</columns>
        <columns>Deactivated__c</columns>
        <columns>Harvest_ID__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Harvest Expense Category Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Harvest Expense Categories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>